Button bug fix
(Partially) Fixed button.css bug which stretched out button on load initially.

--- a/src/style/button.css
+++ b/src/style/button.css
@@ -8,6 +8,7 @@
     color: white;
     transition: all 0.2s ease;
     margin-right: 15px;
+    max-width: 160px;
 }
 .button:hover{
     box-shadow: 0px 0px 5px grey;
